WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306219
Me fix FIMXE
https://bugs.webkit.org/show_bug.cgi?id=306219
Summary
Me fix FIMXE
Sam Weinig
Reported
2026-01-25 11:02:42 PST
FIXME please FIMXE!
Attachments
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2026-01-25 11:05:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57212
EWS
Comment 2
2026-01-25 15:41:38 PST
Committed
306178@main
(6e287faaedf2): <
https://commits.webkit.org/306178@main
> Reviewed commits have been landed. Closing PR #57212 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-01-25 15:42:13 PST
<
rdar://problem/168883395
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug