Source/WebKit/WebProcess/GPU/media/WebMediaStrategy.cpp
@@ -144,7 +144,7 @@ void WebMediaStrategy::enableMockMediaSource()
 #if PLATFORM(COCOA) && ENABLE(VIDEO)
 void WebMediaStrategy::nativeImageFromVideoFrame(const WebCore::VideoFrame& frame, CompletionHandler<void(std::optional<RefPtr<WebCore::NativeImage>>&&)>&& completionHandler)
 {
-    // FIMXE: Move out of sync IPC.
+    // FIXME: Move out of sync IPC.
     completionHandler(WebProcess::singleton().ensureProtectedGPUProcessConnection()->protectedVideoFrameObjectHeapProxy()->getNativeImage(frame));
 }
 #endif
